Background scales and such
Added folder with background images

--- a/html/index.html
+++ b/html/index.html
@@ -2,15 +2,15 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>DRMV, Inc.</title>
-		<link rel="stylesheet" type="text/css" href="index.css">
-
+	<title>drmv, Inc.</title>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,100italic' rel='stylesheet' type='text/css'>
+	<link href="index.css" rel="stylesheet" type="text/css">
 </head>
 
-<body bgcolor="#222222" onload="">
+<body onload="">
 	
 	<div id="container">
-		<div id="title">DRMV, Inc.</div>
+		<div id="title"><h1>drmv, Inc.</h1></div>
 
 		<div id="sidebar">
 
