first iteration of frosted glass effect

--- a/html/index.html
+++ b/html/index.html
@@ -13,13 +13,15 @@
 		<div id="title"><h1>drmv, Inc.</h1></div>
 
 		<div id="sidebar">
-
+			<div class="blur"></div>
 		</div>
 
 		<div id="content">
-		
+			<div class="blur"></div>
 		</div>
+
 	</div>
+
 
 </body>
 </html>
