--- a/html/coolSites.html
+++ b/html/coolSites.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 	<title>DRMV, Inc.</title>
-		<link rel="stylesheet" type="text/css" href="index.css">
-
+		<link rel="stylesheet" type="text/css" href="coolSites.css">
 </head>
 
 <body bgcolor="#222222" onload="">
@@ -15,7 +14,29 @@
 		</div>
 
 		<div id="content">
-		
+
+			<div id="leftCol">
+
+				<div class="box">Hi</div>
+				<div class="box">Hi2</div>
+				<div class="box">Hi3</div>
+
+			</div>
+			<div id="middleCol">
+
+				<div class="box">M</div>
+				<div class="box">M1</div>
+				<div class="box">M2</div>
+
+			</div>
+			<div id="rightCol">
+
+				<div class="box">R</div>
+				<div class="box">R1</div>
+				<div class="box">R2</div>
+
+			</div>
+
 		</div>
 	</div>
 
