--- a/html/index.html
+++ b/html/index.html
@@ -10,14 +10,26 @@
 <body onload="">
 	
 	<div id="container">
-		<div id="title"><h1>drmv, Inc.</h1></div>
-
-		<div id="sidebar">
+		<div id="titleContainer">
 			<div class="blur"></div>
+			<div class="content">
+				<h1>drmv, Inc.</h1>
+			</div>
 		</div>
 
-		<div id="content">
+		<div id="sidebarContainer">
 			<div class="blur"></div>
+			<div class="content">
+				<p>Select 1</p>
+				<p>Select 2</p>
+			</div>
+		</div>
+
+		<div id="contentContainer">
+			<div class="blur"></div>
+			<div class="content">
+				<p>Lorem Ipsum, bitch...</p><p><tab>-Jesse Pinkman</p>
+			</div>
 		</div>
 
 	</div>
