Fluid horizontal scaling

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 
 <body onload="">
 	
-	<div id="container">
+	<div id="mainContainer">
 		<div id="titleContainer">
 			<div class="blur"></div>
 			<div class="content">
@@ -28,7 +28,7 @@
 		<div id="contentContainer">
 			<div class="blur"></div>
 			<div class="content">
-				<p>Lorem Ipsum, bitch...</p><p><tab>-Jesse Pinkman</p>
+				<p>Lorem Ipsum, bitch...</p><p>-Jesse Pinkman</p>
 			</div>
 		</div>
 
