grid squares positioning

--- a/html/coolSites.html
+++ b/html/coolSites.html
@@ -15,25 +15,19 @@
 
 		<div id="content">
 
-			<div id="leftCol">
+			<div id="grid">
 
-				<div class="box">Hi</div>
-				<div class="box">Hi2</div>
-				<div class="box">Hi3</div>
-
-			</div>
-			<div id="middleCol">
-
-				<div class="box">M</div>
-				<div class="box">M1</div>
-				<div class="box">M2</div>
-
-			</div>
-			<div id="rightCol">
-
-				<div class="box">R</div>
-				<div class="box">R1</div>
-				<div class="box">R2</div>
+			<div class="block s1x1 p0x0">1</div>
+			<div class="block s1x1 p1x0">2</div>
+			<div class="block s1x1 p2x0">3</div>
+			
+			<div class="block s1x1 p0x1">4</div>
+			<div class="block s1x1 p1x1">5</div>
+			<div class="block s1x1 p2x1">6</div>
+			
+			<div class="block s1x1 p0x2">7</div>
+			<div class="block s1x1 p1x2">8</div>
+			<div class="block s1x1 p2x2">9</div>
 
 			</div>
 
