adding index files

--- a/html/index.html
+++ b/html/index.html
@@ -2,25 +2,38 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>DRMV, Inc.</title>
-		<link rel="stylesheet" type="text/css" href="index.css">
-
+	<title>drmv, Inc.</title>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,100italic' rel='stylesheet' type='text/css'>
+	<link href="index.css" rel="stylesheet" type="text/css">
 </head>
 
-<body bgcolor="#222222" onload="">
+<body onload="">
 	
-	<div id="container">
-		
-		<div id="title">DRMV, Inc.</div>
-
-		<div id="sidebar">
-
+	<div id="mainContainer">
+		<div id="titleContainer">
+			<div class="blur"></div>
+			<div class="content">
+				<h1>drmv, Inc.</h1>
+			</div>
 		</div>
 
-		<div id="content">
-		
+		<div id="sidebarContainer">
+			<div class="blur"></div>
+			<div class="content">
+				<p>Select 1</p>
+				<p>Select 2</p>
+			</div>
 		</div>
+
+		<div id="contentContainer">
+			<div class="blur"></div>
+			<div class="content">
+				<p>Lorem Ipsum, bitch...</p><p>-Jesse Pinkman</p>
+			</div>
+		</div>
+
 	</div>
+
 
 </body>
 </html>
