--- a/html/index.html
+++ b/html/index.html
@@ -3,36 +3,104 @@
 <html>
 <head>
 	<title>drmv, Inc.</title>
-	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,100italic' rel='stylesheet' type='text/css'>
+	<!-- CSS Sources -->
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,300italic,400,100italic' rel='stylesheet' type='text/css'>
 	<link href="index.css" rel="stylesheet" type="text/css">
+
+	<!-- Javascript Sources -->
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+	<!-- <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script> -->
+	<script type="text/javascript" src="../backstretch/jquery.backstretch.js"></script>
+	<script type="text/javascript" src="../js/blur.js"></script>
+
 </head>
 
-<body onload="">
-	
+<body onload="blurMain()">
+
 	<div id="mainContainer">
-		<div id="titleContainer">
-			<div class="blur"></div>
-			<div class="content">
-				<h1>drmv, Inc.</h1>
-			</div>
-		</div>
+		<!-- <div class="newBlur"></div> -->
 
-		<div id="sidebarContainer">
-			<div class="blur"></div>
-			<div class="content">
-				<p>Select 1</p>
-				<p>Select 2</p>
-			</div>
-		</div>
+		<div id="layoutContainer">
 
-		<div id="contentContainer">
-			<div class="blur"></div>
-			<div class="content">
-				<p>Lorem Ipsum, bitch...</p><p>-Jesse Pinkman</p>
+			<div id="titleContainer">
+				<div class="newBlur">
+					<img src="../images/bg_3_blur.jpg">
+				</div>
+				<div class="content">
+					<h1>Testing...</h1>
+				</div>
 			</div>
-		</div>
 
+			<div id="sidebarContainer">
+				
+				<nav>
+					<ul style="padding-left: 10px;">
+
+						<li class="newBlur">
+							<img src="../images/bg_3_blur.jpg">
+							<a class="sidebarElement" href="http://www.google.com">Google</a>
+						</li>
+
+						<li class="newBlur">
+							<img src="../images/bg_3_blur.jpg">
+							<a class="sidebarElement" href="javascript:setGlass()">setGlass</a>
+						</li>
+
+						<li class="newBlur">
+							<img src="../images/bg_3_blur.jpg">
+							<a class="sidebarElement" href="http://www.yahoo.com">Yahoo!</a>
+						</li>
+
+						<li class="newBlur">
+							<img src="../images/bg_3_blur.jpg">
+							<a class="sidebarElement" href="http://www.facebook.com">Facebook</a>
+						</li>
+
+					</ul>
+					<!-- end nav -->
+				</nav>
+
+			<!-- 	
+					<div id="google" class="sidebarElement" >
+						<div class="newBlur">
+							<img src="../images/bg_3_blur.jpg">
+						</div>
+
+						<div class="content">
+							<a href="http://www.google.com">Google</a>
+						</div>
+
+					</div>
+
+					<div id="setGlass" class="sidebarElement">
+						
+						<div class="newBlur">
+							<img src="../images/bg_3_blur.jpg">
+						</div>
+
+						<div class="content">
+							<a href="javascript:setGlass()">setGlass</a>
+						</div>
+
+					</div>
+				 -->
+				 <!-- end sidebarContainer -->
+			</div> 
+
+			<div id="contentContainer">
+
+				<div class="newBlur">
+					<img src="../images/bg_3_blur.jpg">
+				</div>
+
+				<div class="content">
+					<p>Lorem Ipsum</p>
+				</div>
+			</div>
+
+		</div>
 	</div>
+	
 
 
 </body>
