adding img files

--- a/html/coolSites.html
+++ b/html/coolSites.html
@@ -7,28 +7,33 @@
 
 <body bgcolor="#222222" onload="">
 	
-	<div id="container">
+	<div id="mainContainer">
 		
 		<div id="sidebar">
-
+			<div class="blur"></div>
 		</div>
 
-		<div id="content">
+		<div id="contentContainer">
 
-			<div id="grid">
+			<div class="blur"></div>
 
-			<div class="block s1x1 p0x0">1</div>
-			<div class="block s1x1 p1x0">2</div>
-			<div class="block s1x1 p2x0">3</div>
-			
-			<div class="block s1x1 p0x1">4</div>
-			<div class="block s1x1 p1x1">5</div>
-			<div class="block s1x1 p2x1">6</div>
-			
-			<div class="block s1x1 p0x2">7</div>
-			<div class="block s1x1 p1x2">8</div>
-			<div class="block s1x1 p2x2">9</div>
+			<div class="content">
+				<p>PINKMAN RULEZ DA HAUS</p>
+				<div id="grid">
 
+				<div class="block s1x1 p0x0">1</div>
+				<div class="block s1x1 p1x0">2</div>
+				<div class="block s1x1 p2x0">3</div>
+				
+				<div class="block s1x1 p0x1">4</div>
+				<div class="block s1x1 p1x1">5</div>
+				<div class="block s1x1 p2x1">6</div>
+				
+				<div class="block s1x1 p0x2">7</div>
+				<div class="block s1x1 p1x2">8</div>
+				<div class="block s1x1 p2x2">9</div>
+
+				</div>
 			</div>
 
 		</div>
