--- a/html/index.html
+++ b/html/index.html
@@ -18,13 +18,12 @@
 <body onload="blurMain()">
 
 	<div id="mainContainer">
-		<!-- <div class="newBlur"></div> -->
-
+		
 		<div id="layoutContainer">
 
 			<div id="titleContainer">
 				<div class="newBlur">
-					<img src="../images/bg_3_blur.jpg">
+					<img src="../images/bg_3_blur2.jpg">
 				</div>
 				<div class="content">
 					<h1>Testing...</h1>
@@ -37,60 +36,35 @@
 					<ul style="padding-left: 10px;">
 
 						<li class="newBlur">
-							<img src="../images/bg_3_blur.jpg">
-							<a class="sidebarElement" href="http://www.google.com">Google</a>
+							<img src="../images/bg_3_blur2.jpg">
+							<a class="sidebarElement" id="google" href="http://www.google.com">Google</a>
 						</li>
 
 						<li class="newBlur">
-							<img src="../images/bg_3_blur.jpg">
+							<img src="../images/bg_3_blur2.jpg">
 							<a class="sidebarElement" href="javascript:setGlass()">setGlass</a>
 						</li>
 
 						<li class="newBlur">
-							<img src="../images/bg_3_blur.jpg">
+							<img src="../images/bg_3_blur2.jpg">
 							<a class="sidebarElement" href="http://www.yahoo.com">Yahoo!</a>
 						</li>
 
 						<li class="newBlur">
-							<img src="../images/bg_3_blur.jpg">
-							<a class="sidebarElement" href="http://www.facebook.com">Facebook</a>
+							<img src="../images/bg_3_blur2.jpg">
+							<a class="sidebarElement" id="facebook" href="http://www.facebook.com">Facebook</a>
 						</li>
 
 					</ul>
 					<!-- end nav -->
 				</nav>
-
-			<!-- 	
-					<div id="google" class="sidebarElement" >
-						<div class="newBlur">
-							<img src="../images/bg_3_blur.jpg">
-						</div>
-
-						<div class="content">
-							<a href="http://www.google.com">Google</a>
-						</div>
-
-					</div>
-
-					<div id="setGlass" class="sidebarElement">
-						
-						<div class="newBlur">
-							<img src="../images/bg_3_blur.jpg">
-						</div>
-
-						<div class="content">
-							<a href="javascript:setGlass()">setGlass</a>
-						</div>
-
-					</div>
-				 -->
 				 <!-- end sidebarContainer -->
 			</div> 
 
 			<div id="contentContainer">
 
 				<div class="newBlur">
-					<img src="../images/bg_3_blur.jpg">
+					<img src="../images/bg_3_blur2.jpg">
 				</div>
 
 				<div class="content">
