--- a/html/index.html
+++ b/html/index.html
@@ -3,36 +3,66 @@
 <html>
 <head>
 	<title>drmv, Inc.</title>
-	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,100italic' rel='stylesheet' type='text/css'>
+	<!-- CSS Sources -->
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,300italic,400,100italic' rel='stylesheet' type='text/css'>
 	<link href="index.css" rel="stylesheet" type="text/css">
 </head>
 
-<body onload="">
-	
+<body>
+
 	<div id="mainContainer">
-		<div id="titleContainer">
-			<div class="blur"></div>
-			<div class="content">
-				<h1>drmv, Inc.</h1>
-			</div>
-		</div>
+		
+		<div id="layoutContainer">
 
-		<div id="sidebarContainer">
-			<div class="blur"></div>
-			<div class="content">
-				<p>Select 1</p>
-				<p>Select 2</p>
+			<div id="titleContainer">
+				<div class="blur">
+				</div>
+				<div class="content">
+					<h1>Testing...</h1>
+				</div>
 			</div>
-		</div>
 
-		<div id="contentContainer">
-			<div class="blur"></div>
-			<div class="content">
-				<p>Lorem Ipsum, bitch...</p><p>-Jesse Pinkman</p>
+			<div id="sidebarContainer">
+				
+				<nav>
+					<ul style="padding-left: 10px;">
+
+						<li class="blur">
+						</li>
+						<a class="sidebarElement" id="google" href="http://www.google.com">Google</a>
+
+						<li class="blur">
+						</li>
+						<a class="sidebarElement" href="javascript:setGlass()">setGlass</a>
+
+						<li class="blur">
+						</li>
+						<a class="sidebarElement" id="yahoo" href="http://www.yahoo.com">Yahoo!</a>
+
+						<li class="blur">
+						</li>
+						<a class="sidebarElement" id="facebook" href="http://www.facebook.com">Facebook</a>
+
+					</ul>
+					<!-- end nav -->
+				</nav>
+				 <!-- end sidebarContainer -->
+			</div> 
+
+			<div id="contentContainer">
+
+				<div class="blur">
+					<!-- <img src="../images/bg_3_blur2.jpg"> -->
+				</div>
+
+				<div class="content">
+					<p>Lorem Ipsum</p>
+				</div>
 			</div>
-		</div>
 
+		</div>
 	</div>
+	
 
 
 </body>
