Page doesn't glitch on load anymore
Added javascript to take care of it
Also a few changes to layout

--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body onload="blurMain()">
+<body onload="glassInit()">
 
 	<div id="mainContainer">
 		
@@ -34,6 +34,11 @@
 				
 				<nav>
 					<ul style="padding-left: 10px;">
+						
+						<li class="newBlur">
+							<img src="../images/bg_3_blur2.jpg">
+							<a class="sidebarElement" href="javascript:setGlass()">setGlass</a>
+						</li>
 
 						<li class="newBlur">
 							<img src="../images/bg_3_blur2.jpg">
@@ -42,12 +47,7 @@
 
 						<li class="newBlur">
 							<img src="../images/bg_3_blur2.jpg">
-							<a class="sidebarElement" href="javascript:setGlass()">setGlass</a>
-						</li>
-
-						<li class="newBlur">
-							<img src="../images/bg_3_blur2.jpg">
-							<a class="sidebarElement" href="http://www.yahoo.com">Yahoo!</a>
+							<a class="sidebarElement" id="yahoo" href="http://www.yahoo.com">Yahoo!</a>
 						</li>
 
 						<li class="newBlur">
