--- a/html/coolSites.html
+++ b/html/coolSites.html
@@ -1,43 +1,80 @@
+<!-- coolSites.html -->
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>DRMV, Inc.</title>
-		<link rel="stylesheet" type="text/css" href="coolSites.css">
+	<title>Cool Sites</title>
+	<!-- CSS Sources -->
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,300italic,400,100italic' rel='stylesheet' type='text/css'>
+	<link href="coolSites.css" rel="stylesheet" type="text/css">
 </head>
 
-<body bgcolor="#222222" onload="">
-	
+<body>
+
 	<div id="mainContainer">
 		
-		<div id="sidebar">
-			<div class="blur"></div>
-		</div>
+		<div id="layoutContainer">
 
-		<div id="contentContainer">
+			<div id="titleContainer">
+				<div class="blur">
+				</div>
+				<div class="content">
+					<h1>Testing...</h1>
+				</div>
+			</div>
 
-			<div class="blur"></div>
-
-			<div class="content">
-				<p>PINKMAN RULEZ DA HAUS</p>
-				<div id="grid">
-
-				<div class="block s1x1 p0x0">1</div>
-				<div class="block s1x1 p1x0">2</div>
-				<div class="block s1x1 p2x0">3</div>
+			<div id="sidebarContainer">
 				
-				<div class="block s1x1 p0x1">4</div>
-				<div class="block s1x1 p1x1">5</div>
-				<div class="block s1x1 p2x1">6</div>
-				
-				<div class="block s1x1 p0x2">7</div>
-				<div class="block s1x1 p1x2">8</div>
-				<div class="block s1x1 p2x2">9</div>
+				<nav>
+					<ul style="padding-left: 10px;">
 
+						<li class="blur">
+						</li>
+						<a class="sidebarElement" id="google" href="http://www.google.com">Google</a>
+
+						<li class="blur">
+						</li>
+						<a class="sidebarElement" id="yahoo" href="http://www.yahoo.com">Yahoo!</a>
+
+						<li class="blur">
+						</li>
+						<a class="sidebarElement" id="facebook" href="http://www.facebook.com">Facebook</a>
+
+					</ul>
+					<!-- end nav -->
+				</nav>
+				 <!-- end sidebarContainer -->
+			</div> 
+
+			<div id="contentContainer">
+
+				<div class="blur">
+					<!-- <img src="../images/bg_3_blur2.jpg"> -->
+				</div>
+
+				<div class="content">
+					<p class ="headerText">PINKMAN RULEZ</p>
+					<div class="column" id="col1"><p>COLUMN 1</p>
+						<div class="box box1"><p>Box 1</p></div>
+						<div class="box box2"><p>Box 2</p></div>
+						<div class="box box3"><p>Box 3</p></div> 
+					</div>
+					<div class="column" id="col2"><p>COLUMN 2</p>
+						<div class="box box1"><p>Box 1</p></div>
+						<div class="box box2"><p>Box 2</p></div>
+						<div class="box box3"><p>Box 3</p></div>
+					</div>
+					<div class="column" id="col3"><p>COLUMN 3</p>
+						<div class="box box1"><p>Box 1</p></div>
+						<div class="box box2"><p>Box 2</p></div>
+						<div class="box box3"><p>Box 3</p></div>
+					</div>
 				</div>
 			</div>
 
 		</div>
 	</div>
+	
+
 
 </body>
 </html>
