--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>drmv, Inc.</title>
 	<!-- CSS Sources -->
-	<link href='http://fonts.googleapis.com/css?family=Lato:300,300italic,400,100italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,100,100italic' rel='stylesheet' type='text/css'>
 	<link href="index.css" rel="stylesheet" type="text/css">
 
 	<!-- Javascript Sources -->
