--- a/html/coolSites.html
+++ b/html/coolSites.html
@@ -6,6 +6,7 @@
 	<!-- CSS Sources -->
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,300italic,400,100italic' rel='stylesheet' type='text/css'>
 	<link href="coolSites.css" rel="stylesheet" type="text/css">
+	<!-- <link href="index.css" rel="stylesheet" type="text/css"> -->
 </head>
 
 <body>
@@ -51,7 +52,7 @@
 					<!-- <img src="../images/bg_3_blur2.jpg"> -->
 				</div>
 
-				<div class="content">
+				<div class="content grid">
 					<p class ="headerText">PINKMAN RULEZ</p>
 					<div class="column" id="col1"><p>COLUMN 1</p>
 						<div class="box box1"><p>Box 1</p></div>
